--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
       <artifactId>gson</artifactId>
       <version>2.3.1</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.apis</groupId>
+      <artifactId>google-api-services-playmoviespartner</artifactId>
+      <version>v1-rev3-1.20.0</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
